# Customer-Feedback-Intelligence-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  prompts.py  pyproject.toml  rag_ingestion.py  railway.json  requirements-deploy.txt  reviewlens_ai_protocol.py  reviewlens_ai_stream.py  reviewlens_server.py  skills-lock.json  test_reviewlens_ai_stream.py  test_reviewlens_server.py  webcrawl_appstore.py
.agents/skill-groups/: README.md
.agents/skill-groups/accessibility-inclusive/: accessibility-test-plan  disability-inclusive-personas  error-prevention-recovery  form-labelling  gesture-alternatives  gesture-patterns  heading-structure  inclusive-user-stories  keyboard-navigation  keyboard-review  memory-load-reduction  motion-sensitivity  multi-modal-input  multimedia-accessibility  plain-language-design  readable-measure  responsive-accessibility  situational-impairment-mapping  table-accessibility  user-preference-respect  voice-interaction
.agents/skill-groups/content-handoff/: slides  (+10 more)
.claude/: settings.local.json
.codex/: AGENTS.md  hooks.json
backend/: __init__.py  reviewlens_ai_stream.py  reviewlens_server.py
data/: backlog_recommendations.json  classification.py  generate_backlog_recommendations.py  instagram_reviews_full.csv  instagram_reviews_rag.csv  rag_ingestion_checkpoint.json  webcrawl_appstore_playstore.py
frontend/: app.js  backlog.html  backlog.js  chat.html  chat.js  index.html  styles.css
scripts/: run_python.sh
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json
(+143 files in other folders)
