[project]
name = "customer-feedback-intelligence-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "google-play-scraper>=1.2.7",
    "langchain",
    "langchain-openai",
    "pandas>=2.3.3",
    "pypdf",
    "python-dotenv",
    "sentence-transformers",
    "streamlit",
]
