[project]
name = "customer-feedback-intelligence-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.14.0",
    "beautifulsoup4>=4.15.0",
    "chromadb",
    "firecrawl-py>=4.30.2",
    "google-play-scraper>=1.2.7",
    "langchain",
    "langchain-openai",
    "langid>=1.1.6",
    "openai>=2.40.0",
    "pandas>=2.3.3",
    "praw>=8.0.1",
    "pypdf",
    "python-dotenv",
    "qdrant-client>=1.16.1",
    "requests",
    "sentence-transformers",
    "streamlit",
    "tqdm>=4.67.3",
    "youtube-comment-downloader>=0.1.78",
    "yt-dlp>=2026.6.9",
]
